infra/k8s/auth-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgres
  template:
    metadata:
      labels:
        app: auth-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14-alpine
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-pv-claim
      restartPolicy: Always
      volumes:
        - name: postgres-pv-claim
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres-srv
spec:
  selector:
    app: auth-postgres
  type: NodePort
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30432
